--- a/fall_19/1.ipynb
+++ b/fall_19/1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,12 @@
     "from sklearn.metrics import accuracy_score, f1_score\n",
     "tqdm.pandas(desc=\"progress-bar\")\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "import sklearn, sklearn.ensemble, sklearn.tree, sklearn.semi_supervised, sklearn.discriminant_analysis\n",
+    "import sklearn.neural_network, sklearn.gaussian_process\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -79,7 +84,64 @@
     "def feature_eng(tweet):\n",
     "    step1 = re.sub(r'@([^:\\s]+)', r'__MENTION__', tweet)\n",
     "    output = re.sub(r'(https?://[^\\s]+)', r'__URL__', step1)\n",
-    "    return output"
+    "    return output\n",
+    "\n",
+    "def test_multiclass_classifiers(X_train, y_train, X_test, y_test):\n",
+    "    classifiers = [sklearn.naive_bayes.BernoulliNB, sklearn.tree.DecisionTreeClassifier,\n",
+    "        sklearn.tree.ExtraTreeClassifier, sklearn.ensemble.ExtraTreesClassifier,\n",
+    "        #sklearn.naive_bayes.GaussianNB, \n",
+    "        sklearn.neighbors.KNeighborsClassifier,\n",
+    "        #klearn.semi_supervised.LabelPropagation, sklearn.semi_supervised.LabelSpreading,\n",
+    "        #sklearn.discriminant_analysis.LinearDiscriminantAnalysis, \n",
+    "        sklearn.svm.LinearSVC,\n",
+    "        sklearn.linear_model.LogisticRegression, sklearn.linear_model.LogisticRegressionCV,\n",
+    "        sklearn.neural_network.MLPClassifier,  sklearn.neighbors.NearestCentroid,\n",
+    "        #sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis, \n",
+    "        #sklearn.neighbors.RadiusNeighborsClassifier, \n",
+    "        sklearn.ensemble.RandomForestClassifier, sklearn.linear_model.RidgeClassifier, sklearn.linear_model.RidgeClassifierCV,\n",
+    "        #sklearn.svm.NuSVC,\n",
+    "        #sklearn.svm.SVC, sklearn.gaussian_process.GaussianProcessClassifier, \n",
+    "        sklearn.ensemble.GradientBoostingClassifier,\n",
+    "        sklearn.gaussian_process.GaussianProcessClassifier, sklearn.svm.LinearSVC,\n",
+    "        sklearn.linear_model.LogisticRegression, sklearn.linear_model.LogisticRegressionCV,\n",
+    "        sklearn.linear_model.SGDClassifier, sklearn.linear_model.Perceptron,\n",
+    "        sklearn.linear_model.PassiveAggressiveClassifier]\n",
+    "\n",
+    "    for clf in classifiers:\n",
+    "        print(clf)\n",
+    "        pipeline = Pipeline([('vect',CountVectorizer(max_df=0.5, ngram_range = (1,2), lowercase = True)),\n",
+    "                        (str(clf), clf())])\n",
+    "        pipeline.fit(X_train, y_train)\n",
+    "\n",
+    "        y_predicted = pipeline.predict(X_test)\n",
+    "\n",
+    "        score = sum(y_test == y_predicted)/len(y_test) * 100\n",
+    "        \n",
+    "        print(\"Score = {:.2f}\".format(score))\n",
+    "        print()\n",
+    "        \n",
+    "def test_multilabel_classifiers(X_train, y_train, X_test, y_test):\n",
+    "    classifiers = [sklearn.tree.DecisionTreeClassifier,\n",
+    "    sklearn.tree.ExtraTreeClassifier,\n",
+    "    sklearn.ensemble.ExtraTreesClassifier,\n",
+    "    sklearn.neighbors.KNeighborsClassifier,\n",
+    "    sklearn.neural_network.MLPClassifier,\n",
+    "    sklearn.ensemble.RandomForestClassifier]\n",
+    "    \n",
+    "    for clf in classifiers:\n",
+    "        print(clf)\n",
+    "        pipeline = Pipeline([('vect',CountVectorizer(max_df=0.5, ngram_range = (1,2), lowercase = True)),\n",
+    "                        (str(clf), clf())])\n",
+    "        pipeline.fit(X_train, np.array(y_train))\n",
+    "\n",
+    "        y_predicted = pipeline.predict(X_test)\n",
+    "\n",
+    "        score = sum([np.prod(i) for i in np.array(y_predicted == y_test)])/len(y_test) * 100\n",
+    "        \n",
+    "        print(\"Score = {:.2f}\".format(score))\n",
+    "        print()\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -168,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pipeline Model"
+    "# Model 1 - Classify FP Tweets"
    ]
   },
   {
@@ -208,9 +270,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fit_time : [0.03010821 0.02455068 0.06723499 0.02423477 0.02455854]\n",
+      "fit_time : [0.03773546 0.07001805 0.02494287 0.02439761 0.02523303]\n",
       "\n",
-      "score_time : [0.01297736 0.00976539 0.00967407 0.00972581 0.00927305]\n",
+      "score_time : [0.01480889 0.00984931 0.00929761 0.00943398 0.00937867]\n",
       "\n",
       "test_precision_macro : [0.74634503 0.77284946 0.79069767 0.79282151 0.79175258]\n",
       "\n",
@@ -262,7 +324,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "done in 1.158s\n",
+      "done in 1.232s\n",
       "Best score: 0.813\n",
       "Best parameters set:\n",
       "\tvect__lowercase: 'True'\n"
@@ -273,7 +335,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Done   6 out of  10 | elapsed:    1.0s remaining:    0.7s\n",
-      "[Parallel(n_jobs=-1)]: Done  10 out of  10 | elapsed:    1.1s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  10 out of  10 | elapsed:    1.2s finished\n"
      ]
     }
    ],
@@ -333,15 +395,6 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_predicted = pipeline.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -360,6 +413,7 @@
     }
    ],
    "source": [
+    "y_predicted = pipeline.predict(X_test)\n",
     "print(classification_report(y_predicted, y_test))"
    ]
   },
@@ -367,12 +421,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Running the model"
+    "# Run Model 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -457,11 +511,261 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model 2 - Multiple Classification\n",
+    "Using only FP tweets from labeled data as training data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_cols = [\"Observe mosquito\", \"Mosquito Bite\", \"Observe spraying\", \"General spraying observation\",\n",
+    "        \"Spraying for self\", \"Spraying for someone else\", \"Other kind of intervention\",\n",
+    "        \"Environmental consequences\", \"Conspiracies\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame()\n",
+    "for file in glob.glob(\"refilteredtweets/*\"):\n",
+    "    df = pd.concat([df, pd.read_csv(file)], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fp_tweets = df[df[\"FP\"] == 1].fillna(0)\n",
+    "X = fp_tweets[\"tweets\"]\n",
+    "y = fp_tweets[y_cols]\n",
+    "\n",
+    "#Fix value\n",
+    "y.loc[y[\"Spraying for someone else\"] == \"1?\", \"Spraying for someone else\"] = 1.0\n",
+    "y = y.astype(\"float64\")\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multi class approach\n",
+    "* 9 classes: 0 to 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train = np.argmax(np.array(y_train), axis=1)\n",
+    "y_test = np.argmax(np.array(y_test), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: 114\n",
+      "1: 9\n",
+      "2: 7\n",
+      "3: 7\n",
+      "4: 21\n",
+      "6: 2\n",
+      "7: 17\n",
+      "8: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "values, counts = np.unique(y_train, return_counts=True)\n",
+    "for i, j in zip(values, counts):\n",
+    "    print(\"{}: {}\".format(i, j))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline = Pipeline([('vect',CountVectorizer(max_df=0.5, ngram_range = (1,2), lowercase = True)),\n",
+    "                    ('MNB',MultinomialNB(fit_prior=False))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "         steps=[('vect',\n",
+       "                 CountVectorizer(analyzer='word', binary=False,\n",
+       "                                 decode_error='strict',\n",
+       "                                 dtype=<class 'numpy.int64'>, encoding='utf-8',\n",
+       "                                 input='content', lowercase=True, max_df=0.5,\n",
+       "                                 max_features=None, min_df=1,\n",
+       "                                 ngram_range=(1, 2), preprocessor=None,\n",
+       "                                 stop_words=None, strip_accents=None,\n",
+       "                                 token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+       "                                 tokenizer=None, vocabulary=None)),\n",
+       "                ('MNB',\n",
+       "                 MultinomialNB(alpha=1.0, class_prior=None, fit_prior=False))],\n",
+       "         verbose=False)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.97      0.71      0.82        41\n",
+      "           1       0.00      0.00      0.00         1\n",
+      "           3       0.00      0.00      0.00         0\n",
+      "           4       0.00      0.00      0.00         1\n",
+      "           5       0.00      0.00      0.00         0\n",
+      "           7       0.17      0.33      0.22         3\n",
+      "           8       0.00      0.00      0.00         0\n",
+      "\n",
+      "    accuracy                           0.65        46\n",
+      "   macro avg       0.16      0.15      0.15        46\n",
+      "weighted avg       0.87      0.65      0.74        46\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_predicted = pipeline.predict(X_test)\n",
+    "print(classification_report(y_predicted, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test_multiclass_classifiers(X_train, y_train, X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multi label approach\n",
+    "* 8 labels for each row: in a form of a list [0/1, 0/1, 0/1, 0/1, 0/1, 0/1, 0/1, 0/1, 0/1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 1.0, 0.0, 0.0]\n",
+      "[1.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "[1.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "[0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "[1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(y_train)):\n",
+    "    if(sum(y_train.iloc[i]) >= 2):\n",
+    "        print(list(y_train.iloc[i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'sklearn.tree.tree.DecisionTreeClassifier'>\n",
+      "Score = 56.52\n",
+      "\n",
+      "<class 'sklearn.tree.tree.ExtraTreeClassifier'>\n",
+      "Score = 58.70\n",
+      "\n",
+      "<class 'sklearn.ensemble.forest.ExtraTreesClassifier'>\n",
+      "Score = 63.04\n",
+      "\n",
+      "<class 'sklearn.neighbors.classification.KNeighborsClassifier'>\n",
+      "Score = 63.04\n",
+      "\n",
+      "<class 'sklearn.neural_network.multilayer_perceptron.MLPClassifier'>\n",
+      "Score = 63.04\n",
+      "\n",
+      "<class 'sklearn.ensemble.forest.RandomForestClassifier'>\n",
+      "Score = 63.04\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_multilabel_classifiers(X_train, y_train, X_test, y_test)"
+   ]
   }
  ],
  "metadata": {
